package es.uniovi.dlp.ast.types;

public class IntType extends AbstractType {

    public IntType(int line, int column) {

        super(line, column);
    }

    @Override
    public String getTypeExpression() {
        return "int";
    }


}
