@startuml Types
skinparam style strictuml
skinparam monochrome true

interface ASTNode {
    getLine(): int
    getColumn(): int
}

interface Type

class IntType

class RealType

class CharType

class ArrayType {
    size: int
    type: Type
}

class VoidType

class FunctionType {
    params: List<VarDef>
    returnType: Type
}

class StructType {
    fields: List<StructField>
}

class StructField {
    name: String
    type: Type
}

ASTNode <|-- Type
Type <|.. IntType
Type <|.. RealType
Type <|.. CharType
Type <|.. ArrayType
Type <|.. VoidType
Type <|.. FunctionType
Type <|.. StructType
StructType o-- StructField
ASTNode <|-- StructField
@enduml
